syntax = "proto3";

option csharp_namespace = "Common.Protobuf";


// Name: FPOOPDKEANO
// CmdId: 1214
message AvatarFightPropNotify {
    map<uint32, float> fight_prop_map = 5;
    uint64 avatar_guid = 8;
}

