syntax = "proto3";

option csharp_namespace = "Common.Protobuf";


// Name: DBDANALHILN
// CmdId: 1234
message AvatarFightPropUpdateNotify {
    map<uint32, float> fight_prop_map = 6;
    uint64 avatar_guid = 13;
}

