// https://github.com/SlushinPS/beach-simulator
// Copyright (C) 2023 Slushy Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";
option csharp_namespace = "Common.Protobuf";
option java_package = "emu.grasscutter.net.proto";
import "StopServerInfo.proto";
// CmdId: 196
// Obf: LACJKFEIOGO
message GetPlayerTokenRsp {
	bool MPBPEOPDLOE = 343;
	bytes security_cmd_buffer = 10;
	bool IHPKEJKFANM = 960;
	string birthday = 2027;
	StopServerInfo stop_server = 647;
	uint32 channel_id = 362;
	bytes extra_bin_data = 3;
	uint32 gm_uid = 11;
	string client_ip_str = 2034;
	uint32 sub_channel_id = 2;
	string account_uid = 12;
	uint32 tag = 1367;
	string country_code = 107;
	uint64 secret_key_seed = 7;
	string sign = 1972;
	repeated uint32 finish_collection_id_list = 1918;
	string msg = 4;
	uint32 platform_type = 6;
	uint32 key_id = 1327;
	uint32 reg_platform = 797;
	uint32 cloudClientIp = 285;
	uint32 uid = 5;
	uint32 account_type = 766;
	bool is_proficient_player = 8;
	uint32 blackUidEndTime = 13;
	int32 retcode = 1;
	bool is_guest = 14;
	string secret_key = 9;
	string token = 15;
	string client_version_random_key = 684;
	string psn_id = 1502;
	string server_rand_key = 1089;
}
