// https://github.com/SlushinPS/beach-simulator
// Copyright (C) 2023 Slushy Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";
option csharp_namespace = "Common.Protobuf";
option java_package = "emu.grasscutter.net.proto";
import "NHFPBBLCHKH.proto";
import "Vector.proto";
import "EnterType.proto";
// CmdId: 2783
// Obf: PBJBDNIOMBF
message PlayerEnterSceneNotify {
	string scene_transaction = 1319;
	NHFPBBLCHKH DCGPONECHMM = 897;
	bool is_skip_ui = 3;
	uint32 prev_scene_id = 9;
	bool is_first_login_enter_scene = 164;
	uint32 target_uid = 1;
	repeated uint32 scene_tag_id_list = 13;
	Vector prev_pos = 12;
	uint32 enter_scene_token = 7;
	uint32 world_type = 1327;
	EnterType type = 6;
	uint32 enter_reason = 670;
	Vector pos = 14;
	uint64 scene_begin_time = 5;
	uint32 LAJGLCIFKCP = 1820;
	uint32 world_level = 4;
	uint32 dungeon_id = 11;
	uint32 scene_id = 10;
	uint32 create_player_uid = 1748;
}
